Update bot state data structure
